--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "~4.16.4",
+    "socket.io": "~2.1.1"
+  },
+  "devDependencies": {
+    "morgan": "~1.9.1",
+    "winston": "~3.1.0"
+  }
 }
