--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "final",
   "version": "1.0.0",
   "description": "First commit",
-  "main": "index.js",
+  "main": "client/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server/server.js",
+    "react": "npm start start --prefix client",
+    "start": "concurrently 'npm run react' 'npm run server'"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/Benji-Leboe/final#readme",
   "dependencies": {
+    "concurrently": "~4.0.1",
     "nodemon": "~1.18.4"
   }
 }
