--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-redux": "~5.0.7",
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.0.5",
-    "redux": "~4.0.1"
+    "redux": "~4.0.1",
+    "socket.io-client": "~2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
