--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "~4.3.1",
     "react-scripts": "2.0.5",
     "redux": "~4.0.1",
-    "socket.io-client": "~2.1.1"
+    "socket.io-client": "~2.1.1",
+    "uuid": "~3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
