update package.json with npm run install-all

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First commit",
   "main": "client/src/index.js",
   "scripts": {
-    "install": "concurrently 'npm install --prefix server' 'npm install --prefix client'",
+    "install-all": "concurrently 'npm install' 'npm install --prefix server' 'npm install --prefix client'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server/server.js",
     "react": "npm start --prefix client",
