--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Benji-Leboe/final#readme",
   "dependencies": {
+    "antd": "^3.10.1",
     "concurrently": "~4.0.1",
     "nodemon": "~1.18.4"
   }
