--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-dom": "16.5.2",
     "concurrently": "~4.0.1",
     "nodemon": "~1.18.4"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.10.0"
   }
 }
