--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Benji-Leboe/final#readme",
   "dependencies": {
     "concurrently": "~4.0.1",
-    "nodemon": "~1.18.4"
+    "nodemon": "~1.18.4",
+    "react-codemirror": "^1.0.0"
   }
 }
