--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "dependencies": {
     "concurrently": "~4.0.1",
     "nodemon": "~1.18.4"
+  },
+  "devDependencies": {
+    "remote-redux-devtools": "~0.5.13"
   }
 }
