--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "socket.io-client": "~2.1.1",
     "uuid": "~3.3.2"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "npm sass:build && react-scripts build",
