--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,11 @@
   },
   "version": "0.1.0",
   "private": true,
+  "main": "./src/electron-main/electron-main.js",
   "dependencies": {
+    "electron": "^3.0.5",
+    "electron-is-dev": "^1.0.1",
+    "electron-next": "^3.1.5",
     "pm2": "~3.2.2",
     "prop-types": "~15.6.2",
     "react": "^16.5.2",
@@ -24,8 +28,9 @@
     "uuid": "~3.3.2"
   },
   "scripts": {
+    "electron": "electron ./src/electron-main/electron-starter",
     "start": "react-scripts start",
-    "build": "npm sass:build && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sass": "sass --watch src/styles/scss:src/styles/css",
@@ -45,6 +50,7 @@
     "npm": "6.4.1"
   },
   "devDependencies": {
+    "next": "^7.0.2",
     "node-sass": "~4.9.4"
   }
 }
