--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.1",
+    "bluebird": "^3.5.2",
     "pm2": "~3.2.2",
     "prop-types": "~15.6.2",
     "react": "^16.5.2",
