--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "~4.16.4",
+    "mime-types": "~2.1.21",
     "socket.io": "~2.1.1"
   },
   "devDependencies": {
