fix stylings and capitalization

--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
   "private": true,
   "main": "./src/electron-main/electron-main.js",
   "dependencies": {
+    "antd": "^3.10.1",
+    "bluebird": "^3.5.2",
+    "codemirror": "~5.41.0",
     "electron": "^3.0.5",
     "electron-is-dev": "^1.0.1",
     "electron-next": "^3.1.5",
-    "antd": "^3.10.1",
-    "bluebird": "^3.5.2",
     "pm2": "~3.2.2",
     "prop-types": "~15.6.2",
     "react": "^16.5.2",
