--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -11,7 +11,22 @@
   "dependencies": {
     "electron": "^2.0.9",
     "node-pty": "^0.7.8",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "socket.io-client": "^2.1.1",
     "xterm": "3.7.0"
+  },
+  "devDependencies": {
+    "babel": "^5.6.10",
+    "babel-core": "^5.6.11",
+    "babel-loader": "^5.2.2",
+    "css-loader": "^0.15.1",
+    "electron-packager": "^4.1.3",
+    "node-libs-browser": "^0.5.2",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.12",
+    "webpack-dev-server": "^1.9.0",
+    "electron-is-dev": "^1.0.1",
+    "electron-devtools-installer": "^2.2.4"
   }
 }
