--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -14,6 +14,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "socket.io-client": "^2.1.1",
+    "webpack-html-plugin": "^0.1.1",
     "xterm": "3.7.0"
   },
   "devDependencies": {
