--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "~1.18.3",
     "express": "~4.16.4",
     "mime-types": "~2.1.21",
     "socket.io": "~2.1.1",
