--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -26,12 +26,12 @@
     "babel-loader": "^8.0.4",
     "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.0.1",
-    "electron-packager": "^4.1.3",
+    "electron-packager": "~12.2.0",
+    "html-webpack-plugin": "~3.2.0",
     "node-libs-browser": "^0.5.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.12.4",
     "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-html-plugin": "^0.1.1"
+    "webpack-cli": "^3.1.2"
   }
 }
