--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -30,7 +30,7 @@
     "html-webpack-plugin": "~3.2.0",
     "node-libs-browser": "^0.5.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.12.4",
+    "style-loader": "~0.12.4",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
   }
