--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "electron",
+  "name": "electron-app",
   "version": "0.1.0",
   "private": true,
-  "description": "CodeCast Electron App with Xterm + React.",
-  "main": "src/electron-main.js",
+  "description": "CodeCast Electron App with Xterm + React",
+  "main": "public/electron-main.js",
   "scripts": {
-    "start": "PORT=4000 react-scripts start",
-    "electron": "electron . --ignore-gpu-blacklist",
+    "start": "concurrently 'BROWSER=none npm run react-start' 'wait-on http://localhost:4000/ && npm run electron-dev'",
+    "react-start": "PORT=4000 react-scripts start",
+    "electron-dev": "ELECTRON_START_URL=http://localhost:4000 electron .",
+    "electron-start": "electron . --ignore-gpu-blacklist",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "./",
   "proxy": "http://localhost:8080",
   "repository": "https://github.com/benji-leboe/codeCast",
-  "author": "Spencer Shupe, Benji Leboe",
   "dependencies": {
     "antd": "^3.10.3",
     "axios": "~0.18.0",
-    "electron": "^2.0.9",
+    "electron": "~3.0.6",
     "node-pty": "^0.7.8",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-socket.io": "^1.4.0",
     "socket.io-client": "^2.1.1",
-    "xterm": "3.7.0"
+    "wait-on": "~3.1.0",
+    "xterm": "3.8.0"
   },
   "devDependencies": {
-    "electron-devtools-installer": "^2.2.4",
+    "concurrently": "~4.0.1",
+    "electron-devtools-installer": "~2.2.4",
     "electron-is-dev": "^1.0.1",
-    "electron-packager": "^12.2.0",
-    "node-libs-browser": "^0.5.2",
-    "concurrently": "~4.0.1"
+    "electron-packager": "^12.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
