--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -20,6 +20,7 @@
     "antd": "^3.10.3",
     "axios": "~0.18.0",
     "electron": "~3.0.6",
+    "electron-window-manager": "~1.0.6",
     "node-pty": "^0.7.8",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
