--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-socket.io": "^1.4.0",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "wait-on": "~3.1.0",
     "xterm": "3.8.0"
