--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -4,6 +4,7 @@
   "description": "codeCast Broadcaster electron app, with xterm and react.",
   "main": "main.js",
   "scripts": {
+    "build-start": "npm run build && npm start",
     "start": "electron . --ignore-gpu-blacklist",
     "build": "webpack"
   },
