--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "antd": "^3.10.3",
     "axios": "~0.18.0",
+    "browserslist": "~4.3.4",
     "electron": "^2.0.9",
     "node-pty": "^0.7.8",
     "prop-types": "^15.6.2",
@@ -23,9 +24,10 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-socket.io": "^1.4.0",
+    "redux-thunk": "~2.3.0",
     "socket.io-client": "^2.1.1",
-    "xterm": "3.7.0",
-    "uuid": "~3.3.2"
+    "uuid": "~3.3.2",
+    "xterm": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -46,7 +48,9 @@
     "webpack-cli": "^3.1.2"
   },
   "browserslist": [
-    "electron",
-    "node"
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
   ]
 }
