--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "redux": "~4.0.1",
     "redux-socket.io": "~1.4.0",
     "socket.io-client": "~2.1.1",
-    "uuid": "~3.3.2"
+    "uuid": "~3.3.2",
+    "xterm": "^3.8.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
