--- a/electronapp/.babelrc
+++ b/electronapp/.babelrc
@@ -1,3 +1,9 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    ["import", {
+      "libraryName": "antd",
+      "style": true
+    }]
+  ]
 }
