--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -7,9 +7,7 @@
     "build-start": "npm run build && npm start",
     "start": "electron . --ignore-gpu-blacklist",
     "build": "webpack",
-    "rebuild-pty": "electron-rebuild -f -w node-pty",
-    "build-start": "npm run build && npm start",
-    "start": "electron . --ignore-gpu-blacklist"
+    "rebuild-pty": "electron-rebuild -f -w node-pty"
   },
   "proxy": "http://localhost:8080",
   "repository": "https://github.com/benji-leboe/codeCast",
@@ -40,6 +38,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import": "~1.11.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.0.1",
     "electron-packager": "^12.2.0",
