--- a/client/package.json
+++ b/client/package.json
@@ -34,9 +34,9 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "sass": "sass --watch src/styles/scss:src/styles/css",
     "sass:build": "sass — update src/styles/scss:src/styles/css"
@@ -51,7 +51,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "next": "^7.0.2",
-    "node-sass": "~4.9.4"
+    "customize-cra": "~0.1.1",
+    "node-sass": "~4.9.4",
+    "react-app-rewired": "~1.6.2"
   }
 }
