--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "concurrently": "~4.0.1",
     "nodemon": "~1.18.4",
+    "react-router-bootstrap": "~0.24.4",
     "wait-on": "~3.1.0"
   },
   "devDependencies": {
