--- a/electronapp/.babelrc
+++ b/electronapp/.babelrc
@@ -1,9 +1,9 @@
 {
-  "plugins": [
+  "plugins": [ 
     "@babel/plugin-proposal-class-properties",
-    ["import", {
+    ["babel-plugin-import", {
       "libraryName": "antd",
-      "style": true
+      "style": "css"
     }]
   ]
 }
