--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -39,12 +39,15 @@
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "~1.11.0",
+    "css-loader": "~1.0.1",
     "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.0.1",
     "electron-packager": "^12.2.0",
     "electron-rebuild": "~1.8.2",
     "html-webpack-plugin": "~3.2.0",
+    "less-loader": "~4.1.0",
     "node-libs-browser": "^0.5.2",
+    "node-sass": "~4.9.4",
     "sass-loader": "^7.1.0",
     "style-loader": "~0.12.4",
     "webpack": "^4.23.1",
