--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -7,7 +7,8 @@
     "build-start": "npm run build && npm start",
     "start": "electron . --ignore-gpu-blacklist",
     "build": "webpack",
-    "rebuild-pty": "electron-rebuild -f -w node-pty"
+    "rebuild-pty": "electron-rebuild -f -w node-pty",
+    "sass": "sass --watch /src/styles/scss:src/styles/css"
   },
   "proxy": "http://localhost:8080",
   "repository": "https://github.com/benji-leboe/codeCast",
@@ -26,6 +27,7 @@
     "redux": "^4.0.1",
     "redux-socket.io": "^1.4.0",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.14.3",
     "socket.io-client": "^2.1.1",
     "term-size": "^1.2.0",
     "uuid": "~3.3.2",
