fixed electron css import

--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -8,7 +8,7 @@
     "start": "electron . --ignore-gpu-blacklist",
     "build": "webpack",
     "rebuild-pty": "electron-rebuild -f -w node-pty",
-    "sass": "sass --watch /src/styles/scss:src/styles/css"
+    "sass": "sass --watch ./src/styles/scss:src/styles/css"
   },
   "proxy": "http://localhost:8080",
   "repository": "https://github.com/benji-leboe/codeCast",
