--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "sass": "sass --watch src/styles/scss:src/styles/css",
-    "sass:build": "sass — update src/styles/scss:src/styles/css"
+    "sass": "sass --watch src/styles/scss/index.scss:src/styles/css/index.css",
+    "sass:build": "sass — update src/styles/scss/index.scss:src/styles/css/index.css"
   },
   "eslintConfig": {
     "extends": "react-app"
