--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -46,6 +46,7 @@
     "electron-is-dev": "^1.0.1",
     "electron-packager": "^12.2.0",
     "electron-rebuild": "~1.8.2",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "~3.2.0",
     "less-loader": "~4.1.0",
     "node-libs-browser": "^0.5.2",
