--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -10,7 +10,7 @@
     "rebuild-pty": "electron-rebuild -f -w node-pty",
     "sass": "sass --watch src/styles/scss:src/styles/css"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "https://codecastserver.herokuapp.com",
   "repository": "https://github.com/benji-leboe/codeCast",
   "author": "Spencer Shupe, Benji Leboe, Erik Mackie",
   "dependencies": {
