commit styling changes for electron

--- a/electronapp/.babelrc
+++ b/electronapp/.babelrc
@@ -1,7 +1,7 @@
 {
   "plugins": [ 
     "@babel/plugin-proposal-class-properties",
-    ["babel-plugin-import", {
+    ["import", {
       "libraryName": "antd",
       "style": "css"
     }]
