--- a/electronapp/.babelrc
+++ b/electronapp/.babelrc
@@ -1,9 +1,5 @@
 {
   "plugins": [ 
-    "@babel/plugin-proposal-class-properties",
-    ["import", {
-      "libraryName": "antd",
-      "style": "css"
-    }]
+    "@babel/plugin-proposal-class-properties"
   ]
 }
