--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -10,7 +10,7 @@
     "rebuild-pty": "electron-rebuild -f -w node-pty",
     "sass": "sass --watch src/styles/scss/index.scss:public/styles/css/index.css"
   },
-  "proxy": "https://arcane-thicket-82509.herokuapp.com/",
+  "proxy": "http://localhost:8080/",
   "repository": "https://github.com/benji-leboe/codeCast",
   "author": "Spencer Shupe, Benji Leboe, Erik Mackie",
   "dependencies": {
