--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "uuid": "~3.3.2",
     "xterm": "^3.8.0"
   },
-  "proxy": "http://localhost:8080/",
+  "proxy": "http://codecastserver-prod.us-west-2.elasticbeanstalk.com/:8080/",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
