--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,8 @@
 node_modules
 **/.DS_Store
 **/package-lock.json
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
