.env variables coming soon

--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -12,7 +12,7 @@
     "sass": "sass --watch src/styles/scss/index.scss:public/styles/css/index.css",
     "build-prod": "cp -r . ../electron-v4/codeCast.app/Contents/Resources/app/"
   },
-  "proxy": "http://http://codeCastServer-prod.us-west-2.elasticbeanstalk.com/",
+  "proxy": "http://codeCastServer-prod.us-west-2.elasticbeanstalk.com/",
   "repository": "https://github.com/benji-leboe/codeCast",
   "author": "Spencer Shupe, Benji Leboe, Erik Mackie",
   "dependencies": {
