until users feature is created, put downloads in nav right

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_NODE_PATH=./src
 AWS_S3_BUCKET_NAME=codecast-hosting-mobilehub-946378481
+AWS_S3_NATIVE_APP_BUCKET=http://codecastnative.s3.amazonaws.com/
