minor security update

--- a/electronapp/package.json
+++ b/electronapp/package.json
@@ -23,9 +23,9 @@
     "antd": "^3.10.3",
     "axios": "~0.18.0",
     "browserslist": "^4.3.4",
-    "electron-devtools-installer": "^2.2.4",
-    "electron-is-dev": "^1.0.1",
     "less": "~3.8.1",
+    "node-abi": "^2.7.0",
+    "node-dir": "^0.1.17",
     "node-pty": "^0.7.8",
     "postcss-loader": "~3.0.0",
     "prop-types": "^15.6.2",
@@ -51,8 +51,11 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "~1.11.0",
     "css-loader": "~1.0.1",
-    "electron": "1.8.4",
-    "electron-packager": "^12.2.0",
+    "decompress-zip": "^0.3.2",
+    "electron": "^4.0.4",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-is-dev": "^1.0.1",
+    "electron-packager": "^13.0.1",
     "electron-rebuild": "~1.8.2",
     "file-loader": "~2.0.0",
     "html-webpack-plugin": "~3.2.0",
