--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,6 @@
     "react-dom": "^16.5.2",
     "react-redux": "~5.0.7",
     "react-router-dom": "~4.3.1",
-    "react-scripts": "^2.1.3",
     "redux": "~4.0.1",
     "redux-logger": "^3.0.6",
     "redux-socket.io": "~1.4.0",
@@ -55,6 +54,7 @@
   "devDependencies": {
     "customize-cra": "~0.1.1",
     "node-sass": "~4.9.4",
-    "react-app-rewired": "~1.6.2"
+    "react-app-rewired": "~1.6.2",
+    "react-scripts": "^1.1.5"
   }
 }
